--- a/high-level/sass/style.css
+++ b/high-level/sass/style.css
@@ -1285,78 +1285,81 @@ section {
   }
 }
 
-.member__slider-item {
+.staff-card {
   position: relative;
-}
-.member__slider-item img {
-  border-radius: 30px;
   width: 300px;
-  height: 379px;
 }
 @media (max-width: 768px) {
-  .member__slider-item img {
+  .staff-card {
     width: 246px;
-    height: 311px;
   }
 }
-.member__slider-item .reverse {
+
+.staff-card_image {
+  border-radius: 30px;
+  overflow: hidden;
+}
+.staff-card_image img {
+  width: 100%;
+}
+.staff-card_image.reverse {
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
 }
 
-.member__slider-item_message-wrapper {
+.staff-card_message-wrapper {
   position: absolute;
   top: 331px;
   left: 0px;
   display: inline-block;
 }
 @media (max-width: 768px) {
-  .member__slider-item_message-wrapper {
+  .staff-card_message-wrapper {
     top: 263px;
   }
 }
 
-.member__slider-item_message1 {
+.staff-card_message1 {
   margin-bottom: 6px;
 }
 
-.member__slider-item_message1,
-.member__slider-item_message2 {
+.staff-card_message1,
+.staff-card_message2 {
   padding: 5px 7px;
   text-align: center;
   background-color: #AFA86F;
   display: inline-block;
 }
 @media (max-width: 768px) {
-  .member__slider-item_message1,
-  .member__slider-item_message2 {
+  .staff-card_message1,
+  .staff-card_message2 {
     padding: 7px;
   }
 }
-.member__slider-item_message1 p,
-.member__slider-item_message2 p {
+.staff-card_message1 p,
+.staff-card_message2 p {
   font-weight: 700;
   font-size: 20px;
   line-height: 1;
 }
 @media (max-width: 768px) {
-  .member__slider-item_message1 p,
-  .member__slider-item_message2 p {
+  .staff-card_message1 p,
+  .staff-card_message2 p {
     font-size: 16px;
   }
 }
 
-.member__slider-item_profile {
-  margin-top: 34px;
+.staff-card_profile {
+  margin-top: 27px;
   display: inline-block;
 }
 @media (max-width: 768px) {
-  .member__slider-item_profile {
+  .staff-card_profile {
     margin-top: 16px;
   }
 }
 
-.member__slider-item_profile-sub {
+.staff-card_profile-sub {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1364,39 +1367,39 @@ section {
   line-height: 1;
 }
 @media (max-width: 768px) {
-  .member__slider-item_profile-sub {
+  .staff-card_profile-sub {
     margin-top: 14px;
   }
 }
 
-.member__slider-item_profile-role {
+.staff-card_profile-role {
   margin-right: 9px;
 }
 @media (max-width: 768px) {
-  .member__slider-item_profile-role {
+  .staff-card_profile-role {
     margin-right: 13px;
   }
 }
 
-.member__slider-item_profile-role,
-.member__slider-item_profile-joined {
+.staff-card_profile-role,
+.staff-card_profile-joined {
   font-weight: 700;
   font-size: 16px;
 }
 @media (max-width: 768px) {
-  .member__slider-item_profile-role,
-  .member__slider-item_profile-joined {
+  .staff-card_profile-role,
+  .staff-card_profile-joined {
     font-size: 12px;
   }
 }
 
-.member__slider-item_profile-name {
+.staff-card_profile-name {
   font-weight: 700;
   font-size: 24px;
   line-height: 1;
 }
 @media (max-width: 768px) {
-  .member__slider-item_profile-name {
+  .staff-card_profile-name {
     font-size: 20px;
   }
 }
@@ -3171,7 +3174,7 @@ section {
 .page-staff-inner {
   max-width: 1024px;
   margin: 0 auto;
-  padding: 130px 0 139px 0;
+  padding: 128px 19px 137px 19px;
 }
 @media (max-width: 1024px) {
   .page-staff-inner {
@@ -3187,121 +3190,21 @@ section {
   }
 }
 
-.page-staff__list-upper, .page-staff__list-downer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 43px;
-  padding-left: 19px;
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper, .page-staff__list-downer {
-    padding-left: 0;
-    gap: 20px;
-  }
-}
-@media (max-width: 768px) {
-  .page-staff__list-upper, .page-staff__list-downer {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    gap: 50px;
-  }
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .page-staff__list-item, .page-staff__list-downer .page-staff__list-item {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-  }
-}
-@media (max-width: 768px) {
-  .page-staff__list-upper .page-staff__list-item, .page-staff__list-downer .page-staff__list-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: column;
-            flex-flow: column;
-  }
-}
-.page-staff__list-upper .page-staff__list-item img, .page-staff__list-downer .page-staff__list-item img {
-  width: 300px;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .page-staff__list-item img, .page-staff__list-downer .page-staff__list-item img {
-    width: min(280px, 100%);
-    height: 350px;
-  }
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .member__slider-item_message-wrapper, .page-staff__list-downer .member__slider-item_message-wrapper {
-    top: 295px;
-  }
-}
-.page-staff__list-upper .member__slider-item_profile, .page-staff__list-downer .member__slider-item_profile {
-  margin-top: 29px;
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .member__slider-item_profile, .page-staff__list-downer .member__slider-item_profile {
-    margin-top: 20px;
-  }
-}
-@media (max-width: 768px) {
-  .page-staff__list-upper .member__slider-item_profile, .page-staff__list-downer .member__slider-item_profile {
-    margin-top: 8px;
-  }
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .member__slider-item_profile-role, .page-staff__list-upper .member__slider-item_profile-joined, .page-staff__list-downer .member__slider-item_profile-role, .page-staff__list-downer .member__slider-item_profile-joined {
-    font-size: clamp(0.8125rem, 0.4355392157rem + 0.7843137255vw, 0.9375rem);
-  }
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .member__slider-item_message1, .page-staff__list-upper .member__slider-item_message2, .page-staff__list-downer .member__slider-item_message1, .page-staff__list-downer .member__slider-item_message2 {
-    padding: 5px 2px;
-  }
-  .page-staff__list-upper .member__slider-item_message1 p, .page-staff__list-upper .member__slider-item_message2 p, .page-staff__list-downer .member__slider-item_message1 p, .page-staff__list-downer .member__slider-item_message2 p {
-    font-size: clamp(1rem, 0.2460784314rem + 1.568627451vw, 1.25rem);
-  }
-}
-@media (max-width: 768px) {
-  .page-staff__list-upper .member__slider-item_message1, .page-staff__list-upper .member__slider-item_message2, .page-staff__list-downer .member__slider-item_message1, .page-staff__list-downer .member__slider-item_message2 {
-    padding: 5px 7px;
-  }
-  .page-staff__list-upper .member__slider-item_message1 p, .page-staff__list-upper .member__slider-item_message2 p, .page-staff__list-downer .member__slider-item_message1 p, .page-staff__list-downer .member__slider-item_message2 p {
-    font-size: 18px;
-  }
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .member__slider-item_profile-sub, .page-staff__list-downer .member__slider-item_profile-sub {
-    margin-bottom: 10px;
-  }
-}
-@media (max-width: 1024px) {
-  .page-staff__list-upper .member__slider-item_profile-name, .page-staff__list-downer .member__slider-item_profile-name {
-    font-size: 22px;
-  }
+.page-staff__container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 横3列 */
+  grid-template-rows: repeat(2, 1fr); /* 縦2行 */
+  row-gap: 43px; /* 任意：マス同士の間隔 */
+  -webkit-column-gap: 43px;
+     -moz-column-gap: 43px;
+          column-gap: 43px;
 }
 
-.page-staff__list-upper {
-  margin-bottom: 45px;
+.page-staff__container-item.staff-card .staff-card_message-wrapper {
+  top: 334px;
 }
-
-.page-staff__list-downer .page-staff__list-item:nth-child(2) {
-  margin-left: -37px;
-}
-@media (max-width: 1024px) {
-  .page-staff__list-downer .page-staff__list-item:nth-child(2) {
-    margin-left: 0;
-  }
+.page-staff__container-item.staff-card .staff-card_profile {
+  margin-top: 25px;
 }
 
 /* STAFF-個人ページ　-------------*/
@@ -3319,7 +3222,7 @@ section {
 .page-staff-personal-fv-inner {
   max-width: 1024px;
   margin: 0 auto;
-  padding: 43px 24px;
+  padding: 46px 24px 43px 24px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3329,7 +3232,7 @@ section {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  padding-top: 33px;
+  padding-top: 32px;
 }
 
 .page-staff-personal__text-title-wrapper {
@@ -3399,12 +3302,16 @@ section {
 }
 
 .page-staff-personal__interview-inner {
-  max-width: 1024px;
-  padding: 96px 24px 86px 24px;
-  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-width: 1024px;
+  padding: 96px 24px 92px 24px;
+  margin: 0 auto;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  overflow: visible;
 }
 
 .page-staff-personal__interview-contents {
@@ -3417,6 +3324,18 @@ section {
 }
 .page-staff-personal__interview-section:nth-child(n+2):nth-child(-n+6) {
   max-width: 696px;
+}
+.page-staff-personal__interview-section:nth-child(1) {
+  margin-bottom: 20px;
+}
+.page-staff-personal__interview-section:nth-child(2) {
+  margin-bottom: 21px;
+}
+.page-staff-personal__interview-section:nth-child(4) {
+  margin-bottom: 21px;
+}
+.page-staff-personal__interview-section:nth-child(5) {
+  margin-bottom: 17px;
 }
 
 .page-staff-personal__interview-section-heading {
@@ -3440,10 +3359,19 @@ section {
 }
 
 .page-staff-personal__interview-section-desc {
-  line-height: 1.778;
+  line-height: 1.779;
 }
 .page-staff-personal__interview-section-desc span {
   font-weight: 700;
+}
+.page-staff-personal__interview-section-desc:nth-child(1) {
+  line-height: 1.779;
+}
+.page-staff-personal__interview-section-desc:nth-child(2) {
+  line-height: 1.787;
+}
+.page-staff-personal__interview-section-desc:nth-child(6) {
+  line-height: 1.79;
 }
 
 .page-staff-personal__interview-toc {
@@ -3451,6 +3379,20 @@ section {
       -ms-flex: 1;
           flex: 1;
   margin-top: 7px;
+  position: sticky;
+  top: 100px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+@media (max-width: 768px) {
+  .page-staff-personal__interview-toc {
+    display: none;
+  }
 }
 
 .page-staff-personal__interview-toc__title {
@@ -3459,6 +3401,7 @@ section {
 .page-staff-personal__interview-toc__title p {
   font-weight: 700;
   font-size: 14px;
+  color: #666666;
 }
 
 .page-staff-personal__interview-toc__list {
@@ -3475,6 +3418,18 @@ section {
   font-size: 14px;
 }
 
+.page-staff-personal__interview-toc__list li a {
+  color: #999999;
+  text-decoration: none;
+  -webkit-transition: color 0.3s;
+  transition: color 0.3s;
+}
+
+.page-staff-personal__interview-toc__list li a.is-active {
+  color: #222222;
+  font-weight: 700;
+}
+
 .page-staff-personal__othermembers {
   width: 100%;
 }
@@ -3482,7 +3437,7 @@ section {
 .page-staff-personal__othermembers-inner {
   max-width: 1024px;
   margin: 0 auto;
-  padding: 0 19px 139px 19px;
+  padding: 0 19px 136px 19px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3493,29 +3448,23 @@ section {
       -ms-flex-flow: column;
           flex-flow: column;
 }
-.page-staff-personal__othermembers-inner .page-staff__list-downer {
-  padding-left: 0;
-  gap: 0;
-}
-.page-staff-personal__othermembers-inner .page-staff__list-item {
-  text-align: left;
-}
-.page-staff-personal__othermembers-inner .page-staff__list-item:nth-child(1) {
-  margin-right: 17px;
-}
-.page-staff-personal__othermembers-inner .page-staff__list-item:nth-child(2) {
-  margin-left: -10px;
-  margin-right: 43px;
-}
-.page-staff-personal__othermembers-inner .page-staff__list-item:nth-child(3) {
-  margin-left: -10px;
-}
-.page-staff-personal__othermembers-inner .member__slider-item_message-wrapper {
-  text-align: left;
-}
 
 .page-staff-personal__othermembers-title {
   font-weight: 700;
   font-size: 32px;
   margin-bottom: 56px;
+}
+
+.page-staff-personal__othermembers-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 43px;
+}
+
+.page-staff-personal__othermembers-item.staff-card {
+  text-align: left;
+}
+.page-staff-personal__othermembers-item.staff-card .staff-card_profile {
+  margin-top: 23px;
 }
