--- a/high-level/sass/style.scss
+++ b/high-level/sass/style.scss
@@ -42,7 +42,6 @@ body, html {
     margin: 0;
     padding: 0;
     width: auto;
-    overflow-x: hidden;
     scroll-behavior: smooth;
 }
 
@@ -954,6 +953,8 @@ section {
     color: #9797971A;
     line-height: 1;
     z-index: 0;
+    overflow-x: hidden;
+    overflow-y: hidden;
     @include mq($md){
         font-size: 80px;
     }
@@ -1004,7 +1005,8 @@ section {
     padding-top: 52px;
     @media (min-width: 1441px){
         padding-left: 166px;
-        width: calc(100vw - 166px);
+        // width: calc(100vw - 166px);
+        width: 100%;
     }
     @media (max-width: 1440px) and (min-width: 1025px){
         padding-left: 166px;
@@ -1034,6 +1036,7 @@ section {
 }
 
 .staff-card{
+    display: inline-block;  /* ← 追加 */
     position: relative;
     width: 300px;
     @include mq($md){
@@ -1047,14 +1050,12 @@ section {
 
     img{
         width: 100%;
-    }
-
-    &.reverse{
-        transform: scaleX(-1);
-    }  
+    } 
 }
 
-
+.reverse{
+    transform: scaleX(-1);  
+}
 
 .staff-card_message-wrapper{
     position: absolute;
@@ -1084,6 +1085,9 @@ section {
         font-weight: 700;
         font-size: 20px;
         line-height: 1;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; /* 必要なら省略記号も */
         @include mq($md){
             font-size: 16px;
         }
@@ -1519,20 +1523,22 @@ section {
 }
 
 .blog__list-item{
+    width: 452px;
+    height: 180px;    
+    border-radius: 10px;
+    margin: 0 auto;
+    @include mq($lg){
+        width: 80%;
+        height: 121px;
+    }
+    @include mq($md){
+        width: max(341px,80%);
+        height: 121px;
+    }
+
     article{
         display: flex;
-        width: 452px;
-        height: 180px;
-        border-radius: 10px;
         color: #222222;
-        @include mq($lg){
-            width: 80%;
-            height: 121px;
-        }
-        @include mq($md){
-            width: max(341px,80%);
-            height: 121px;
-        }
 
         a{
             color: #222222;
@@ -2066,6 +2072,9 @@ section {
         font-weight: 700;
         font-size: 16px;
         color: #988C2C;
+        white-space: nowrap;
+        overflow: hidden;           /* はみ出した部分を隠す */
+        text-overflow: ellipsis;    /* はみ出した部分を「…」にする */
     }
 }
 
@@ -2081,9 +2090,10 @@ section {
     align-items: center;
     list-style: none;
     margin: 0 auto;
-    padding-left: 2px;
+    padding-left: 3px;
     height: 100%;
     font-size: 14px;
+
     @include mq($lg){
         padding-left: 20px;
         padding-right: 20px;
@@ -2091,6 +2101,16 @@ section {
     @include mq($md){
         padding-left: 15px;
         padding-right: 15px;
+    }
+
+    li {
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+
+        @include mq($md){
+            max-width: 220px; // ← 適宜調整、最大幅が必要
+        }
     }
   
     li::after {
@@ -2533,16 +2553,21 @@ section {
     grid-template-rows: repeat(2, 1fr);    /* 縦2行 */
     row-gap: 43px; /* 任意：マス同士の間隔 */
     column-gap: 43px;
+    @include mq($lg){
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+    @include mq($md){
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
-.page-staff__container-item.staff-card{
-    & .staff-card_message-wrapper {
-        top: 334px;
-    }
+.page-staff__container-item{
+    text-align: center;
+}
 
-    & .staff-card_profile{
-        margin-top: 25px;
-    }
+.page-staff__container-item .staff-card{
+    margin: 0 auto;
 }
 
 /* STAFF-個人ページ　-------------*/
@@ -2561,11 +2586,27 @@ section {
     margin: 0 auto;
     padding: 46px 24px 43px 24px;
     display: flex;
+    @include mq($lg){
+        padding-left: 20px;
+        padding-right: 20px;
+
+    }
+    @include mq($md){
+        flex-flow: column;
+        align-items: center;        
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .page-staff-personal__text{
     flex: 1;
     padding-top: 32px;
+    @include mq($md){
+        order: 2;        
+        padding-left: rclamp(0, 40, 370, 768);
+        padding-right: rclamp(0, 40, 370, 768);
+    }
 }
 
 .page-staff-personal__text-title-wrapper{
@@ -2582,6 +2623,12 @@ section {
         font-weight: 700;
         font-size: 36px;
         line-height: 1;
+        @include mq($lg){
+            font-size: rclamp(30, 36, 769, 1024);
+        }
+        @include mq($md){
+            font-size: rclamp(24, 30, 370, 768);
+        }
     }
 }
 
@@ -2594,6 +2641,9 @@ section {
         font-weight: 700;
         font-size: 24px;
         line-height: 1;
+        @include mq($md){
+            font-size: rclamp(20, 24, 370, 768);
+        }
     }
 }
 
@@ -2614,16 +2664,37 @@ section {
     font-weight: 700;
     font-size: 24px;
     margin-right: 20px;
+    @include mq($md){
+        font-size: 22px;
+    }
+}
+
+.page-staff-personal__profile-joined{
+    @include mq($md){
+        font-size: 14px;
+    }
 }
 
 .page-staff-personal__profile-desc{
     line-height: 1.8;
+    @include mq($lg){
+        font-size: 14px;
+    }
 }
 
 .page-staff-personal__img{
     width: 286px;
     height: 368px;
     margin-left: 85px;
+    @include mq($lg){
+        margin-left: rclamp(50, 85, 769, 1024);
+    }
+    @include mq($md){
+        order: 1;
+        margin-left: 0;
+        width: 250px;
+        height: 320px;
+    }
 
     img{
         width: 100%;
@@ -2638,18 +2709,39 @@ section {
     padding: 96px 24px 92px 24px;
     margin: 0 auto;
     align-items: flex-start; // ★追加！
-    overflow: visible;       // ★overflow: hidden があれば消す！
+    overflow: visible !important;
+    @include mq($lg){
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    @include mq($md){
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .page-staff-personal__interview-contents{
     max-width: 710px;
-    margin-right: 56px;    
+    margin-right: 56px;
+    @include mq($lg){
+        margin-right: 0;
+        padding-left: 40px;
+        padding-right: 40px;
+        min-width: 100%;
+        @include mq($md){       
+            padding-left: rclamp(0, 40, 370, 768);
+            padding-right: rclamp(0, 40, 370, 768);
+        }
+    }
 }
 
 .page-staff-personal__interview-section{
     margin-bottom: 23px;
     &:nth-child(n+2):nth-child(-n+6){
         max-width: 696px;
+        @include mq($lg){
+            min-width: 100%;
+        }
     }
 
     &:nth-child(1){
@@ -2671,6 +2763,13 @@ section {
     font-size: 24px;
     margin-bottom: 44px;
     position: relative;
+    @include mq($lg){
+        font-size: 22px;
+    }
+    @include mq($md){
+        font-size: 20px;
+    }
+
     &::before {
         content: "";
         position: absolute;
@@ -2681,6 +2780,9 @@ section {
         width: 100vw;
         height: 1px;
         background-color: #222222;
+        @include mq($md){
+            left: -7px;
+        }
     }
 }
 
@@ -2688,6 +2790,10 @@ section {
     line-height: 1.779;
     span{
         font-weight: 700;
+    }
+
+    @include mq($md){
+        font-size: 14px;
     }
 
     &:nth-child(1){
@@ -2704,13 +2810,13 @@ section {
 .page-staff-personal__interview-toc{
     flex: 1;
     margin-top: 7px;
-    position: sticky;
-    top: 100px;
+    position: sticky !important;
+    top: 150px;
     flex-shrink: 0;
     height: fit-content;
     align-self: flex-start;
 
-    @include mq($md){
+    @include mq($lg){
         display: none;
     }
 }
@@ -2756,23 +2862,451 @@ section {
     text-align: center;
     display: flex;
     flex-flow: column;
+    @include mq($md){
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    @include mq($md){
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 }
 
 .page-staff-personal__othermembers-title{
     font-weight: 700;
     font-size: 32px;
     margin-bottom: 56px;
+    @include mq($md){
+        font-size: rclamp(28, 32, 370, 767);
+    } 
 }
 
 .page-staff-personal__othermembers-list{
-    display: flex;
-    gap: 43px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* 横3列 */
+    column-gap: 43px;
+    row-gap: 43px;
+    @include mq($lg){
+        grid-template-columns: repeat(2, 1fr);
+    }
+    @include mq($md){
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
 
-.page-staff-personal__othermembers-item.staff-card{
+.page-staff-personal__othermembers-item .staff-card{
     text-align: left;
     .staff-card_profile {
         margin-top: 23px;
     }
 }
 
+/* BLOG　-------------*/
+.page-fv{
+    &.case-blog{
+        background-image: url('../images/blog-fv.jpeg');
+    }
+}
+
+.page-blog-inner{
+    max-width: 1024px;
+    margin: 0 auto;
+    padding: 130px 34px 139px 34px;
+
+    @include mq($lg){
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    @include mq($md){
+        padding: 80px 0 120px 0;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .blog__list{
+        padding-left: 0;
+        padding-right: 0;
+        margin-bottom: 98px;
+        @include mq($md){
+            gap: 20px;
+        }
+    }
+
+    .blog__list-item_content{
+        background-color: #FAF7F1;
+    }
+}
+
+.page-blog_pagenation{
+    display: flex;
+    justify-content: center;
+    gap: 32px;
+}
+
+.page-blog_pagenation-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 58px;
+    height: 58px;
+    border-radius: 50%;
+    background-color: #FFFFFF;
+    border: 1px solid #222222;
+    transition: all 0.3s ease;
+
+    &.is-active{
+        background-color: #222222;
+        color: #FFFFFF;
+    }
+
+    p{
+        color: #222222;
+        font-size: 14px;
+    }
+}
+
+/* BLOG-detail　-------------*/
+.main-inner.case-blog-detail{
+    margin-top: 118px;
+
+    @include mq($lg){
+        margin-top: 54px;
+    }    
+}
+
+.page-blog-detail-inner{
+    padding-top: 34px;
+    background-color: #FAF7F1;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+}
+
+.page-blog-detail_post{
+    max-width: 800px;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    padding: 40px 40px 7px 40px;
+    margin-bottom: 139px;
+    @include mq($lg){
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    @include mq($md){
+        padding-top: 30px;
+        padding-right: rclamp(20, 40, 370, 768);
+        padding-left: rclamp(20, 40, 370, 768);
+        margin-left: rclamp(15, 30, 370, 768);
+        margin-right: rclamp(15, 30, 370, 768);
+    }
+
+    .blog__list-item_content{
+        padding: 0;
+        margin: 0 0 33px 0;
+        width: 100%;
+        height: auto;
+    }
+
+    .blog__list-item_content-tag{
+        margin: 0 19px 0 0;
+        img{
+            margin-right: 3px;
+        }
+    }
+
+    .blog__list-item_content-date{
+        font-size: 14px;
+    }
+
+    .blog__list-item_content-title{
+        font-size: 32px;
+        text-decoration: none;
+        @include mq($lg){
+            font-size: 28px;
+        }
+        @include mq($md){
+            font-size: rclamp(20, 28, 370, 768);
+        }
+    }
+
+    .blog__list-item_img{
+        width: 100%;
+        height: auto;
+        border-radius: 0;
+        margin-bottom: 40px;
+    }
+}
+
+.blog__list-item_content-blog-detail-wrapper{
+    display: flex;
+    align-items: center;
+    margin-bottom: 18px;
+}
+
+.blog__list-item_text{
+    p,ul{
+        line-height: 1.8;
+        margin-bottom: 18px;
+        @include mq($md){
+            font-size: 14px;
+        }
+    }
+
+    li{
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+      
+    li::before{
+        content: '•';
+        margin-left: 9px;
+        margin-right: 9px;
+        color: black;
+        font-size: 1em;
+    }
+
+    h2{
+        font-weight: 700;
+        font-size: 24px;
+        margin-bottom: 45px;
+        @include mq($lg){
+            font-size: 22px;
+        }
+        @include mq($md){
+            font-size: 18px;
+            margin-bottom: 35px;
+        }
+    }
+}
+
+.page-blog-detail_nav{
+    width: 100%;
+    background-color: #F0F0F0;
+}
+
+.page-blog-detail_nav-inner{
+    max-width: 1024px;
+    height: 96px;
+    padding: 23px 50px 20px 50px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+
+    @include mq($lg){
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    @include mq($md){
+        padding-left: rclamp(15, 30, 370, 768);
+        padding-right: rclamp(15, 30, 370, 768);
+        height: auto;
+    }
+
+    .blog__list-item_content-title{
+        font-size: 16px;
+        font-weight: 400;
+        text-decoration: none;
+        margin-bottom: -6px;
+        @include mq($md){
+            font-size: 14px;
+        }
+    }
+}
+
+.page-blog-detail_nav-main{
+    margin-top: -5px;
+}
+
+.page-blog-detail_nav-previous,.page-blog-detail_nav-next{
+    display: flex;
+    flex: 1;
+    align-items: center;
+    gap: 21px;
+    @include mq($lg){
+        gap: 15px;
+    }
+    @include mq($md){
+        gap: 0;
+        display: flex;
+        flex-flow: column;
+    }
+}
+
+.page-blog-detail_nav-previous{
+    @include mq($md){
+        padding-right: 10px;
+    }
+}
+
+.page-blog-detail_nav-next{
+    justify-content: flex-end; // ✅ 自身を右寄せにする
+    border-left: 1px solid #222222;
+    @include mq($md){
+        padding-left: 10px;
+    }
+
+    .page-blog-detail_nav-main{
+        @include mq($md){
+            order: 2;
+        }
+    }
+
+    .page-blog-detail_nav-next-button{
+        @include mq($md){
+            order: 1;
+        }
+    }
+}
+
+.page-blog-detail_nav-previous-button,.page-blog-detail_nav-next-button{
+    width: 24px;
+    height: 24px;
+    @include mq($lg){
+        width: 20px;
+        height: 20px;
+    }
+    @include mq($md){
+        margin-bottom: 10px;
+    }
+
+    img{
+        filter: brightness(1.2) contrast(1.5); // 明るさ・コントラスト調整
+    }
+}
+
+/* BENEFITS　-------------*/
+.page-fv{
+    &.case-benefits{
+        background-image: url('../images/benefits-fv.jpeg');
+    }
+}
+
+.page-benefits{
+    padding: 139px 0 139px 0;
+}
+
+.page-benefits-inner{
+    width: min(1024px,100%);
+    margin: 0 auto;
+    padding-left: 22px;
+    padding-right: 22px;
+
+    .page-section-title{
+        font-size: 32px;
+        margin-bottom: 12px;
+    }    
+}
+
+.page-benefits_system{
+    margin-bottom: 119px;
+}
+
+.page-benefits_system-list{
+    width: 100%;
+    margin-top: 65px;
+
+    th,td{
+        border-bottom: 1px dashed #222222;  /* 枠線 */
+        padding: 36px 0;
+        text-align: left;
+        vertical-align: top;
+    }
+
+    th{
+        font-weight: 700;
+        width: 231px;
+    }
+
+    td{
+        flex: 1;
+        ul{
+            li{
+                display: flex;
+                align-items: center;
+            }
+
+            li::before{
+                content: '•';
+                margin-left: 3px;
+                margin-right: 6px;
+                color: black;
+                font-size: 1em;
+            }
+        }
+    }
+
+    tr:nth-child(1){
+        td{
+            padding-top: 40px;
+            padding-bottom: 38px;
+        }
+    }
+    tr:nth-child(2){
+        th{
+            padding-top: 31px;
+            padding-bottom: 31px;
+        }
+        td{
+            padding-top: 31px;
+            padding-bottom: 31px;
+        }
+    }
+    tr:nth-child(3){
+        th{
+            padding-top: 31px;
+            padding-bottom: 31px;
+        }
+        td{
+            padding-top: 31px;
+            padding-bottom: 31px;
+        }
+    }
+    tr:nth-child(4){
+        th{
+            padding-top: 31px;
+            padding-bottom: 31px;
+        }
+        td{
+            padding-top: 35px;
+            padding-bottom: 36px;
+        }
+    }
+    tr:nth-child(4) td ul li::before {
+        margin-left: 7px;
+        margin-right: 9px;
+    }
+    tr:nth-child(5){
+        th{
+            padding-top: 31px;
+            padding-bottom: 31px;
+        }
+        td{
+            padding-top: 35px;
+            padding-bottom: 41px;
+        }
+    }
+}
+
+.page-benefits_voice-text-wrapper{
+    display: flex;
+    gap: 46px;
+    margin-bottom: 36px;
+}
+
+.page-benefits_voice-text-join{
+    font-weight: 700;
+    color: #988C2C;
+    margin-bottom: 4px;
+}
+
+.page-benefits_voice-text-name{
+    font-weight: 700;
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+
+.page-benefits_voice-text-desc{
+    line-height: 1.8;
+    max-width: 467px;
+}
